--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MyDroidGitExp</string>
     <string name="greetings">Greetings!!</string>
+    <string name="search_user">Search user</string>
 </resources>
