FEAT: Complete SearchUsers functionality implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyDroidGitExp</string>
     <string name="greetings">Greetings!!</string>
     <string name="search_user">Search user</string>
+    <string name="search_schedule_hint">Search for a user </string>
 </resources>
