FEAT: Add back button on SearchFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="greetings">Greetings!!</string>
     <string name="search_user">Search user</string>
     <string name="search_schedule_hint">Search for a user </string>
+    <string name="back">Back</string>
 </resources>
